Header + List Components
- Ajustes das configurações scss

--- a/src/app/modules/catdex/components/header/header.component.html
+++ b/src/app/modules/catdex/components/header/header.component.html
@@ -1,3 +1,6 @@
-<div>
-  <img src="assets/icons/search.svg" alt="Buscar" />
-</div>
+<header>
+  <form>
+    <input type="text" placeholder="Buscar Gato..." />
+    <img src="assets/icons/search.svg" alt="Buscar Gato" />
+  </form>
+</header>
