--- a/src/app/modules/catdex/components/header/header.component.scss
+++ b/src/app/modules/catdex/components/header/header.component.scss
@@ -1,1 +1,34 @@
+:host {
+  header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
+    padding: 40px 0;
+  }
+
+  form {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 15px 20px;
+    background-color: rgba(255, 255, 255, 0.2);
+
+    border-radius: 10px;
+
+    input {
+      width: 95%;
+      background: none;
+      border: none;
+
+      font-size: 18px;
+
+      color: var(--white);
+
+      &::placeholder {
+        color: var(--white);
+      }
+    }
+  }
+}
