--- a/src/app/modules/catdex/components/header/header.component.scss
+++ b/src/app/modules/catdex/components/header/header.component.scss
@@ -22,6 +22,7 @@
       background: none;
       border: none;
 
+      font-family: "Montserrat", sans-serif;
       font-size: 18px;
 
       color: var(--white);
